--- a/app/src/main/res/layout/activity_quizz_game.xml
+++ b/app/src/main/res/layout/activity_quizz_game.xml
@@ -4,30 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuestionsListActivity">
+    tools:context=".QuizzGameActivity">
 
     <ImageView
-        android:id="@+id/mainBackgroundImageView5"
+        android:id="@+id/gameBackgroundImageView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:contentDescription="@string/todo"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:srcCompat="@drawable/gravpac" />
+        app:srcCompat="@drawable/mario" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listrecyclerView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/gameSoundButton"
+        android:layout_width="236dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="60dp"
+        android:text="Ecouter le son"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/mainBackgroundImageView5"
-        app:layout_constraintTop_toTopOf="@+id/mainBackgroundImageView5"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/itemquestion" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gameBackgroundImageView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
