--- a/app/src/main/res/layout/activity_result_quizz.xml
+++ b/app/src/main/res/layout/activity_result_quizz.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ResultQuizzActivity">
 
+    <ImageView
+        android:id="@+id/resultBackgroundImageView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/todo"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/triforce" />
 </androidx.constraintlayout.widget.ConstraintLayout>
