--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,67 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:soundEffectsEnabled="false"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/mainBackgroundImageView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/gravpac" />
+
+    <Button
+        android:id="@+id/mainAboutButton"
+        android:layout_width="300dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="20dp"
+        android:background="#5226EA"
+        android:fontFamily="@font/press_start_2p"
+        android:text="@string/a_propos"
+        app:layout_constraintBottom_toTopOf="@+id/mainBackgroundImageView"
+        app:layout_constraintEnd_toEndOf="@+id/mainPlayButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/mainPlayButton"
+        app:layout_constraintTop_toBottomOf="@+id/mainPlayButton" />
+
+    <Button
+        android:id="@+id/mainPlayButton"
+        android:layout_width="300dp"
+        android:layout_height="58dp"
+        android:background="#5226EA"
+        android:fontFamily="@font/press_start_2p"
+        android:text="@string/jouer"
+        app:layout_constraintBottom_toTopOf="@+id/mainAboutButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/mainBackgroundImageView"
+        app:layout_constraintTop_toBottomOf="@+id/titleMaintextView" />
+
     <TextView
+        android:id="@+id/titleMaintextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="400dp"
+        android:text="@string/pop_quizz"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#DACF03"
+        android:textSize="30sp"
+        android:typeface="normal"
+        android:fontFamily="@font/press_start_2p"
+        app:layout_constraintBottom_toTopOf="@+id/mainPlayButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/mainBackgroundImageView"
+        app:layout_constraintTop_toBottomOf="@+id/mainBackgroundImageView"
+        app:layout_constraintVertical_bias="0.353" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
