--- a/app/src/main/res/layout/itemquestion.xml
+++ b/app/src/main/res/layout/itemquestion.xml
@@ -10,7 +10,7 @@
         android:id="@+id/overlayItemImageView"
         android:layout_width="390dp"
         android:layout_height="191dp"
-        android:background="#FFFFFF"
+        android:background="#4DFF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
