Auto stash before merge of "master" and "origin/master"

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="@string/pop_quizz"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#DACF03"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="#DACF03"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="Créé par Kevin Fagot"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#DACF03"
