--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="20dp"
         android:background="#5226EA"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="@string/a_propos"
         app:layout_constraintBottom_toTopOf="@+id/mainBackgroundImageView"
         app:layout_constraintEnd_toEndOf="@+id/mainPlayButton"
@@ -39,7 +39,7 @@
         android:layout_width="300dp"
         android:layout_height="58dp"
         android:background="#5226EA"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="@string/jouer"
         app:layout_constraintBottom_toTopOf="@+id/mainAboutButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,12 +52,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="400dp"
+        android:fontFamily="@font/presstart2p"
         android:text="@string/pop_quizz"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/customfontstyle"
         android:textColor="#DACF03"
         android:textSize="30sp"
         android:typeface="normal"
-        android:fontFamily="@font/press_start_2p"
         app:layout_constraintBottom_toTopOf="@+id/mainPlayButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
