--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -25,7 +25,7 @@
         android:layout_height="100dp"
         android:layout_marginBottom="200dp"
         android:background="#5226EA"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="Quizz Cinema"
         app:layout_constraintBottom_toTopOf="@+id/vgButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="180dp"
         android:background="#5226EA"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="Quizz Jeux Video"
         app:layout_constraintBottom_toTopOf="@+id/chooseBackgroundImageView"
         app:layout_constraintEnd_toEndOf="parent"
