--- a/app/src/main/res/layout/activity_quizz_game.xml
+++ b/app/src/main/res/layout/activity_quizz_game.xml
@@ -150,7 +150,7 @@
         android:id="@+id/indexQuestionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
