--- a/app/src/main/res/layout/activity_result_quizz.xml
+++ b/app/src/main/res/layout/activity_result_quizz.xml
@@ -24,10 +24,11 @@
         android:id="@+id/congratsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/press_start_2p"
-        android:text="Peu mieux faire"
+        android:fontFamily="@font/presstart2p"
+        android:gravity="center"
+        android:text="Congratulations !"
         android:textColor="#FFFFFF"
-        android:textSize="26sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/scoreTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/press_start_2p"
+        android:fontFamily="@font/presstart2p"
         android:text="1 / 3"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
