--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -27,6 +27,7 @@
         android:background="#5226EA"
         android:fontFamily="@font/presstart2p"
         android:text="Quizz Cinema"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/vgButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +41,7 @@
         android:background="#5226EA"
         android:fontFamily="@font/presstart2p"
         android:text="Quizz Jeux Video"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/chooseBackgroundImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
