--- a/app/src/main/res/layout/itemquestion.xml
+++ b/app/src/main/res/layout/itemquestion.xml
@@ -18,23 +18,24 @@
 
     <ImageView
         android:id="@+id/listImageView"
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/RAtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#DACF03"
+        android:background="#4D000000"
         android:fontFamily="@font/roboto_thin"
+        android:lineSpacingExtra="26sp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/RCtextView"
         app:layout_constraintEnd_toStartOf="@+id/RBtextView"
         app:layout_constraintStart_toEndOf="@+id/listImageView"
@@ -44,10 +45,12 @@
         android:id="@+id/RBtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#DACF03"
+        android:background="#4D000000"
         android:fontFamily="@font/roboto_thin"
+        android:lineSpacingExtra="26sp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/RDtextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -58,10 +61,12 @@
         android:id="@+id/RDtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#DACF03"
+        android:background="#4D000000"
         android:fontFamily="@font/roboto_thin"
+        android:lineSpacingExtra="26sp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -72,10 +77,12 @@
         android:id="@+id/RCtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#DACF03"
+        android:background="#4D000000"
         android:fontFamily="@font/roboto_thin"
+        android:lineSpacingExtra="26sp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/RDtextView"
         app:layout_constraintHorizontal_bias="0.5"
@@ -87,9 +94,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:background="#DACF03"
+        android:background="#4D000000"
         android:fontFamily="@font/roboto_thin"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
