--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="sans-serif"
         android:textSize="14sp"
+        app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/hubBackgroundImageView"
@@ -37,6 +38,7 @@
         android:id="@+id/hubListButton"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/hubBackgroundImageView"
         app:layout_constraintStart_toStartOf="parent"
