--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:background="#5226EA"
         android:fontFamily="@font/presstart2p"
         android:text="@string/a_propos"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/mainBackgroundImageView"
         app:layout_constraintEnd_toEndOf="@+id/mainPlayButton"
         app:layout_constraintHorizontal_bias="0.5"
@@ -41,6 +42,7 @@
         android:background="#5226EA"
         android:fontFamily="@font/presstart2p"
         android:text="@string/jouer"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/mainAboutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
